--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,23 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+@layer base {
+  @font-face {
+    font-family: MerriweatherBold;
+    src: url("/fonts/Merriweather-Bold.ttf");
   }
-  body {
-    color: white;
-    background: black;
+  @font-face {
+    font-family: RobotoRegular;
+    src: url("/fonts/Roboto-Regular.ttf");
   }
+  @font-face {
+    font-family: RobotoLight;
+    src: url("/fonts/Roboto-Light.ttf");
+  }
+}
+
+section {
+
+
 }
